# epicbox-images

.github/workflows/: auto-author-assign.yml  ci.yml
epicbox-clojure/: Dockerfile
epicbox-debian/: Dockerfile
epicbox-go/: Dockerfile
epicbox-haskell/: Dockerfile
epicbox-hyperskill/cpp/: Dockerfile
epicbox-hyperskill/gcc/: Dockerfile
epicbox-hyperskill/gcc/checker/: check.sh
epicbox-hyperskill/go/: Dockerfile
epicbox-hyperskill/gradle/: Dockerfile
epicbox-hyperskill/gradle-spring/: Dockerfile
epicbox-hyperskill/gradle-spring/checker/sandbox/: build.gradle  settings.gradle
epicbox-hyperskill/gradle/checker/template/: build.gradle
epicbox-hyperskill/java/: Dockerfile
epicbox-hyperskill/node/: Dockerfile
epicbox-hyperskill/node-javascript/: Dockerfile
epicbox-hyperskill/node-javascript/checker/: check.sh  process_python.py
epicbox-hyperskill/python/: Dockerfile
epicbox-hyperskill/python/checker/: process.py
epicbox-hyperstyle/: Dockerfile
epicbox-java/: Dockerfile
epicbox-java/11/: Dockerfile
epicbox-java/17/: Dockerfile
epicbox-java/24/: Dockerfile
epicbox-kotlin/: Dockerfile  kotlinc
epicbox-node/: Dockerfile
epicbox-php/: Dockerfile
epicbox-pmd/: Dockerfile
epicbox-python/310/: Dockerfile  pyproject.toml  requirements.txt
epicbox-python/311/: Dockerfile  pyproject.toml  requirements.txt
epicbox-python/312/: Dockerfile  README.md  pyproject.toml  requirements.txt
epicbox-ruby/: Dockerfile
epicbox-scala/2/: Dockerfile
epicbox-scala/3/: Dockerfile
epicbox-typescript/: Dockerfile
